--- a/src/main/resources/templates/crear-producto.html
+++ b/src/main/resources/templates/crear-producto.html
@@ -26,6 +26,22 @@
                 <input class="shadow appearance-none border rounded w-1/2 py-2 px-3 text-gray-700 leading-tight" th:field="*{nombre}" />
             </div>
         </div>
+        <div class="flex flex-row my-0.5">
+            <div class="basis-1/2">
+                Precio
+            </div>
+            <div class="basis-1/2">
+                <input class="shadow appearance-none border rounded w-1/2 py-2 px-3 text-gray-700 leading-tight" th:field="*{precio}" />
+            </div>
+        </div>
+        <div class="flex flex-row my-0.5">
+            <div class="basis-1/2">
+                ID Fabricante
+            </div>
+            <div class="basis-1/2">
+                <input class="shadow appearance-none border rounded w-1/2 py-2 px-3 text-gray-700 leading-tight" th:field="*{id_fabricante}" />
+            </div>
+        </div>
     </form>
 </div>
 </body>
